# ClustOps

./: .gitignore  .kubectlignore  README.md  nginx-ingress.yaml  nginx-web.yaml  okteto.yaml
apps/books/: .containerignore  README.md  pyproject.toml
apps/books/src/books/: app.py
apps/nginx/: deployment.yaml  index.html  okteto.yaml  service.yaml
backups/: calico-config-backup.yaml  calico-kube-controllers.yaml.copy
prueba1/prueba1/: README.md  deployment.yaml  ingress.yaml  okteto.yaml  pvc.yaml
system/app-books/: .kubectlignore  Containerfile  okteto.yaml
system/app-books/deploy/: deployment.yaml  service.yaml
system/app-books/src/books/: app.py
system/client-pods/: ubuntu-client-allowed.yaml  ubuntu-client-denied.yaml
system/cronjobs/: app-books-backup-cronjob.yaml
system/namespaces/: mi-sistema-ns.yaml
system/network-policies/: allow-app-book-ingress.yaml  allow-app-books-ingress.yaml  allow-nginx-ingress.yaml  default-deny-ingress.yaml
system/scripts/: balanceo.sh  libros.sh  restore-latest-backup.sh
system/storage/: app-books-nfs-pv.yaml  app-books-pvc.yaml
system/web-service/: frontend-books-configmap.yaml  nginx-configmap.yaml  nginx-deployment.yaml  nginx-hpa-yaml  nginx-hpa-yaml.yaml  nginx-service.yaml
